bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:4: error: value or is not a member of Boolean
  return !a && b or !b && a
                 ^