bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(a:Boolean, b:Boolean): Boolean = {
  
  return !a && b or !b && a
}